# atlassian-bug-dashboard

./: DEVELOPMENT_WORKFLOW.html  README.md  generate_setup_guide.py  package-lock.json  package.json
backend/: README.md  pyproject.toml  railway.toml
backend/app/: main.py
backend/app/api/routes/: analytics.py  bugs.py  github.py  health.py
backend/app/core/: config.py  database.py
backend/app/models/: bug.py
backend/app/schemas/: bug.py
backend/app/services/: github_client.py  jira_client.py  triage_service.py
backend/scripts/: add_triage_columns.py  init_db.py
docs/: architecture_diagram.py  generate_setup_guide.py
src/app/: layout.tsx  page.tsx
src/app/bugs/: page.tsx
src/app/commits/: page.tsx
src/components/charts/: PriorityBarChart.tsx  StatusBarChart.tsx  TriageCategoryChart.tsx  TriageTeamChart.tsx
src/lib/: api.ts
