[tool.poetry]
package-mode = false
name = "atlassian-bug-dashboard-backend"
version = "0.1.0"
description = "Backend API for Atlassian Bug Intelligence Dashboard"
authors = ["James Bringetto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
prefect = "^3.1.11"
pandas = "^2.2.3"
alembic = "^1.14.0"
anthropic = "^0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.1"
black = "^24.10.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

